--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -12,4 +12,8 @@ html lang='fr'
   = javascript_pack_tag 'application', 'data-turbolinks-track': 'reload'
 
   body
+    p.notice
+      = notice
+    p.alert
+      = alert
     = yield
