Add flash messages in admin

--- a/app/front/styles/admin/layout.sass
+++ b/app/front/styles/admin/layout.sass
@@ -34,3 +34,12 @@ aside
 
 
 
+.flash-message
+  position: absolute
+  top: 1rem
+  margin-left: auto
+  margin-right: auto
+  left: 1.25rem
+  right: 1.25rem
+  text-align: center
+  max-width: 600px
