Add theme images

--- a/app/front/styles/admin/layout.sass
+++ b/app/front/styles/admin/layout.sass
@@ -2,6 +2,7 @@ html, body
   height: 100%
   margin: 0
 
+// MENU
 aside
   .brand
     padding: 0.5rem 0rem
@@ -31,8 +32,6 @@ aside
           border-left: 5px $white solid
     i
       margin-right: 0.5rem
-
-
 
 .flash-message
   position: absolute
