--- a/app/front/styles/application/layout.sass
+++ b/app/front/styles/application/layout.sass
@@ -14,10 +14,18 @@ html, body
   height: 100%
   margin: 0
 
+// MENU
 .side-menu
   transform: translateX(-100%)
   transition: transform .5s ease
 .side-menu_opened
   transform: translateX(0)
 
-
+.block-menu-toggler
+  .block-menu
+    display: none
+    min-height: 400px
+  &.active
+    background-color: theme('colors.gray.800')
+    .block-menu
+      display: block
