--- a/app/views/admin/themes/index.html.slim
+++ b/app/views/admin/themes/index.html.slim
@@ -25,8 +25,8 @@ h1.mb-5 Thèmes
       tr
         th Date de création
         th Titre
+        th Actions
         th Actualités
-        th Pages
         th Ressources
         th
     tbody
