--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -1,10 +1,13 @@
 doctype html
 html lang='fr'
   head
+    title = seo_title
+    meta name="description" content="#{seo_description}"
+    meta name="author" content="L'assembleuse, Elllsa"
+
     meta http-equiv="Content-Type" content=("text/html; charset=UTF-8")
     meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"
     meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    title Pole ESS
     = csrf_meta_tags
     = csp_meta_tag
 
