--- a/app/views/admin/themes/edit.html.slim
+++ b/app/views/admin/themes/edit.html.slim
@@ -1,9 +1,20 @@
-/ - content_for :current_page, :prestations
+.title-wrapper
+  h1
+    ' Édition du thème "#{@theme.title}"
 
-/ = render layout: 'admin/domains/layout' do
-= link_to "Retour", admin_themes_path, class: "btn btn-light mb-4"
+  div.flex
+    = link_to admin_themes_path, class: "btn btn-light mr-4" do
+      i.fa.fa-chevron-left>
+      ' Retour
+    span.small
+      ' Créé le
+      strong => l @theme.created_at
+      ' -
+      ' Mis à jour le
+      strong = l @theme.updated_at
 
-h2 Editer le thème "#{@theme.title}"
+
+  hr
 
 = form_for(@theme, as: :theme, \
   url: admin_theme_path(@theme), html: {class: "form-horizontal"}) do |f| 
