Add primary custom color

--- a/app/front/styles/application.scss
+++ b/app/front/styles/application.scss
@@ -1,5 +1,10 @@
 $fa-font-path: '~@fortawesome/fontawesome-free/webfonts';
 
+:root {
+  --color-primary: #5c6ac4;
+  --color-secondary: #ecc94b;
+}
+
 @import "~@fortawesome/fontawesome-free/scss/fontawesome";
 @import "~@fortawesome/fontawesome-free/scss/brands";
 @import "~@fortawesome/fontawesome-free/scss/regular";
