--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -32,7 +32,7 @@ html lang='fr'
                       = link_to theme.title, theme_path(theme)
                     = link_to "En savoir plus", theme_path(theme), class: "underline"
                   p = theme.baseline
-      nav.flex.items-center.justify-between.bg-teal-500.text-white.p-6
+      nav.flex.items-center.justify-between.bg-primary.text-white.p-6
         button.flex.items-center.flex-1
           svg.fill-current.cursor-pointer viewBox="0 0 100 80" width="40" height="40" xmlns="http://www.w3.org/2000/svg" data-action="click->main-menu#toggleSideMenu"
             title Menu
