--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -41,9 +41,10 @@ html lang='fr'
             rect y="60" width="100" height="15" rx="8"
 
         = link_to root_path, title: "Page d'accueil", class: "block flex items-center w-auto" do
-          svg.fill-current.h-8.w-8.mr-2 height="54" viewbox=("0 0 54 54") width="54" xmlns="http://www.w3.org/2000/svg" 
-            path d=("M13.5 22.1c1.8-7.2 6.3-10.8 13.5-10.8 10.8 0 12.15 8.1 17.55 9.45 3.6.9 6.75-.45 9.45-4.05-1.8 7.2-6.3 10.8-13.5 10.8-10.8 0-12.15-8.1-17.55-9.45-3.6-.9-6.75.45-9.45 4.05zM0 38.3c1.8-7.2 6.3-10.8 13.5-10.8 10.8 0 12.15 8.1 17.55 9.45 3.6.9 6.75-.45 9.45-4.05-1.8 7.2-6.3 10.8-13.5 10.8-10.8 0-12.15-8.1-17.55-9.45-3.6-.9-6.75.45-9.45 4.05z") /
-          span.font-semibold.text-xl.tracking-tight Pôle ESS
+          => image_tag Setting.logo.variant(resize_to_limit: [nil, 50]), class: "mr-3"
+          / svg.fill-current.h-8.w-8.mr-2 height="54" viewbox=("0 0 54 54") width="54" xmlns="http://www.w3.org/2000/svg" 
+          /   path d=("M13.5 22.1c1.8-7.2 6.3-10.8 13.5-10.8 10.8 0 12.15 8.1 17.55 9.45 3.6.9 6.75-.45 9.45-4.05-1.8 7.2-6.3 10.8-13.5 10.8-10.8 0-12.15-8.1-17.55-9.45-3.6-.9-6.75.45-9.45 4.05zM0 38.3c1.8-7.2 6.3-10.8 13.5-10.8 10.8 0 12.15 8.1 17.55 9.45 3.6.9 6.75-.45 9.45-4.05-1.8 7.2-6.3 10.8-13.5 10.8-10.8 0-12.15-8.1-17.55-9.45-3.6-.9-6.75.45-9.45 4.05z") /
+          span.font-semibold.text-xl.tracking-tight = Setting.project_name
         .flex.items-center.text-white.flex-1.justify-end
           .flex.text-sm.items-center.justify-end
             a.block.hidden.md:inline-block.text-teal-200.hover:text-white.mr-4 href="#responsive-header" 
