--- a/app/views/admin/themes/new.html.slim
+++ b/app/views/admin/themes/new.html.slim
@@ -1,9 +1,14 @@
+.title-wrapper
+  h1 Créer un thème
 
-= link_to "Retour", admin_themes_path, class: "btn btn-light mb-4"
+  div.flex
+    = link_to admin_themes_path, class: "btn btn-light mr-4" do
+      i.fa.fa-chevron-left>
+      ' Retour
 
-h2 Créer un thème
+hr
 
 = form_for(@theme, as: :theme, \
   url: admin_themes_path, html: {class: "form-horizontal"}) do |f| 
-  
+
   =  render partial: "form", locals: {f: f}
