--- a/app/views/layouts/administration.html.slim
+++ b/app/views/layouts/administration.html.slim
@@ -27,22 +27,22 @@ html lang="#{I18n.locale}"
                 span.nav-link Contenus chauds
                 ul 
                   li.nav-item
-                    = active_link_to "#", title: "Gérer les actus", class: "nav-link", active: :exclusive do
+                    = active_link_to admin_activities_path, title: "Gérer les actions", class: "nav-link", active: :inclusive do
                       i.fas.fa-fire>
                       ' Actions
                   li.nav-item
-                    = active_link_to "#", title: "Gérer les actus", class: "nav-link", active: :exclusive do
+                    = active_link_to "#", title: "Gérer les actus", class: "nav-link disabled", active: :exclusive do
                       i.fas.fa-fire>
                       ' Actualités
                   li.nav-item
-                    = active_link_to "#", title: "Gérer les actus", class: "nav-link", active: :exclusive do
+                    = active_link_to "#", title: "Gérer les actus", class: "nav-link disabled", active: :exclusive do
                       i.fas.fa-fire>
                       ' Ressources
               li.nav-item.nav-header 
                 span.nav-link Contenus froids
                 ul
                   li.nav-item
-                    = active_link_to "#", title: "Gérer les actus", class: "nav-link", active: :exclusive do
+                    = active_link_to "#", title: "Gérer les actus", class: "nav-link disabled", active: :exclusive do
                       i.fas.fa-snowflake>
                       ' Pages
                   li.nav-item
@@ -50,7 +50,7 @@ html lang="#{I18n.locale}"
                       i.far.fa-snowflake>
                       ' Thèmes
                   li.nav-item
-                    = active_link_to "#", title: "Gérer les actus", class: "nav-link", active: :exclusive do
+                    = active_link_to "#", title: "Gérer les actus", class: "nav-link disabled", active: :exclusive do
                       i.fas.fa-snowflake>
                       ' Profils
               li.nav-item.nav-header 
