--- a/app/views/admin/activities/index.html.slim
+++ b/app/views/admin/activities/index.html.slim
@@ -2,51 +2,66 @@
 h1.mb-5 Actions
 
 
-/ = render layout: 'admin/layout' do
+div data-controller='manage-index'
+  .bg-light.p-3.mb-3
+    h3 Filtres
+    = form_tag admin_activities_path, method: :get, data: {is_filter_form: true} do
 
+      .row
+        .col-lg-4.col-md-6.col-12
+          = label_tag "Par thème"
+          = select_tag :by_theme, \
+            options_for_select(theme_options, params[:by_theme]), \
+            prompt: "Tous les thèmes",\
+            class: "form-control dropdown-action", \
+            id: "dropdown_action",  \
+            data: {action: 'change->manage-index#submitFilterForm'}
 
-/ div.mb-3
-/   = form_tag admin_actions_path, method: :get, data: {is_filter_form: true} do
-
-/     .row
-/       .col-lg-6.col-12
-/         = select_tag :by_domain, \
-/           options_for_select(domain_options, params[:by_domain]), \
-/           prompt: "Tous les domaines",\
-/           class: "form-control dropdown-action", \
-/           id: "dropdown_action",  \
-/           onchange: "$('[data-is-filter-form]').submit()"
-
-.cadre-table
-  table.table.table-striped.table-hover.table-sm
-    thead
-      tr
-        th Date de création
-        th Titre
-        th Thèmes
-
-        th
-    tbody
-      - @activities.each do |activity|
+  .cadre-table
+    table.table.table-striped.table-hover.table-sm
+      thead
         tr
-          td= l activity.created_at
-          td= activity.title
-          / td= link_to admin_intervention_levels_path(by_activity: activity.id), class: "btn btn-light btn-sm" do
-          /   span.ion-ios-list-outline>
-          /   = activity.intervention_levels.count
-          td
-            - activity.themes.each do |theme|
-              .badge.badge-secondary.mr-2
-                = theme.title
-          td=> link_to edit_admin_activity_path(activity), class: "btn btn-sm btn-info mr-2", title: "Editer" do
-            i.fas.fa-pen
-            = link_to admin_activity_path(activity), method: :delete, data: {confirm: "Confirmer la suppression ?"}, title: "Supprimer", class: "btn btn-sm btn-danger" do
-              i.far.fa-trash-alt
+          th Position
+          th Date de création
+          th Titre
+          th Thèmes
+
+          th
+      tbody
+        - max_position    = interface_max_position(params, "Activity") || 1
+        - position_select = (1..max_position).map { |i| [i, i] }
+
+        - @activities.each do |activity|
+          tr
+            - if active_interface_filter?(params)
+              td data-controller='manage-position'
+                - interface = get_interface(activity, params)
+                = form_for interface, as: :interface, url: admin_interface_path(interface, classname: interface.class.name) do |f|
+                  = f.select  :position, \
+                              options_for_select(position_select, interface.position),\
+                              {},
+                              class: "form-control form-control-sm", \
+                              data: {action: 'change->manage-position#submitSelect'}
+            - else
+              td.text-center.disabled -
+            td= l activity.created_at
+            td= activity.title
+            / td= link_to admin_intervention_levels_path(by_activity: activity.id), class: "btn btn-light btn-sm" do
+            /   span.ion-ios-list-outline>
+            /   = activity.intervention_levels.count
+            td
+              - activity.themes.each do |theme|
+                .badge.badge-secondary.mr-2
+                  = theme.title
+            td=> link_to edit_admin_activity_path(activity), class: "btn btn-sm btn-info mr-2", title: "Editer" do
+              i.fas.fa-pen
+              = link_to admin_activity_path(activity), method: :delete, data: {confirm: "Confirmer la suppression ?"}, title: "Supprimer", class: "btn btn-sm btn-danger" do
+                i.far.fa-trash-alt
 
 
-      - if @activities.empty?
-        tr
-          td colspan="7"
-            p.mt-3.text-center: em.text-muted Aucune action
+        - if @activities.empty?
+          tr
+            td colspan="7"
+              p.mt-3.text-center: em.text-muted Aucune action
 
-/ = paginate @activities  
+  / = paginate @activities  
