--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -32,6 +32,22 @@ html lang='fr'
                       = link_to theme.title, theme_path(theme)
                     = link_to "En savoir plus", theme_path(theme), class: "underline"
                   p = theme.baseline
+                .p-6.flex
+                  => image_tag theme.main_image.variant(resize_to_limit: [150, nil]) if theme.main_image.present?
+                  .flex.w-full.ml-6
+                    .w-2/3
+                      h4.uppercase.font-bold.text-sm Nos actions
+                      ul
+                        - theme.activities.order_by_theme_interface_position.each do |activity|
+                          li = link_to activity.title, activity_path(activity)
+                    .w-1/3
+                      h4.uppercase.font-bold.text-sm Pages en lien
+                      ul
+                        li Actualités
+                        li Ressources
+                        li Nous rejoindre
+
+
       nav.flex.items-center.justify-between.bg-primary.text-white.p-6
         button.flex.items-center.flex-1
           svg.fill-current.cursor-pointer viewBox="0 0 100 80" width="40" height="40" xmlns="http://www.w3.org/2000/svg" data-action="click->main-menu#toggleSideMenu"
