--- a/app/views/admin/activities/index.html.slim
+++ b/app/views/admin/activities/index.html.slim
@@ -5,7 +5,7 @@ h1.mb-5 Actions
 div data-controller='manage-index'
   .bg-light.p-3.mb-3
     h3 Filtres
-    = form_tag admin_activities_path, method: :get, data: {is_filter_form: true} do
+    = form_tag admin_activities_path, method: :get do
 
       .row
         .col-lg-4.col-md-6.col-12
