--- a/app/views/layouts/administration.html.slim
+++ b/app/views/layouts/administration.html.slim
@@ -38,7 +38,26 @@ html lang="#{I18n.locale}"
                     = active_link_to "#", title: "Gérer les actus", class: "nav-link disabled", active: :exclusive do
                       i.fas.fa-fire>
                       ' Ressources
-              li.nav-item.nav-header 
+              li.nav-item.nav-header
+                span.nav-link Formations
+                ul
+                  li.nav-item
+                    = active_link_to "#", title: "Gérer les inscriptions", class: "nav-link disabled", active: :exclusive do
+                      i.fas.fa-chalkboard-teacher>
+                      ' Inscriptions
+                  li.nav-item
+                    = active_link_to admin_formations_path, title: "Gérer les formations", class: "nav-link", active: :inclusive do
+                      i.fas.fa-chalkboard-teacher>
+                      ' Formations
+                  li.nav-item
+                    = active_link_to admin_formation_categories_path, title: "Gérer les catégories de formation", class: "nav-link", active: :inclusive do
+                      i.fas.fa-chalkboard-teacher>
+                      ' Catégories
+                  li.nav-item
+                    = active_link_to "#", title: "Gérer les actus", class: "nav-link disabled", active: :exclusive do
+                      i.fas.fa-chalkboard-teacher>
+                      ' Paramètres
+              li.nav-item.nav-header
                 span.nav-link Contenus froids
                 ul
                   li.nav-item
