--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -1,2 +1,8 @@
-.container.mx-auto
+.container.mx-auto.mb-24
   h1.text-xl Contenu
+
+div
+  .w-1/2.text-center
+    .md:w-3/4.mx-auto
+      p.text-xl.mb-6 Vous souhaitez gagner en compétence ou professionnaliser votre équipe ?
+      = link_to "S'inscrire aux formations", formations_path, class: "bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded"
