Simplify formation models #3

--- a/app/front/styles/administration.scss
+++ b/app/front/styles/administration.scss
@@ -10,3 +10,4 @@ $fa-font-path: '~@fortawesome/fontawesome-free/webfonts';
 
 @import "vendors/actiontext.scss";
 @import "admin/layout.sass";
+@import "admin/form.sass";
