--- a/app/views/admin/settings/show.html.slim
+++ b/app/views/admin/settings/show.html.slim
@@ -8,21 +8,25 @@
       = f.label :project_name
       = f.text_field :project_name, value: Setting.project_name, class: "form-control"
 
-    .row data-controller='file-upload'
-      .col-4
+    h4.mb-4 Logo
+    .d-flex data-controller='file-upload'
+      - if Setting.logo.present?
+        .mr-4
+          => image_tag Setting.logo.variant(resize_to_limit: [150, nil])
+      div
         .form-group
-          = f.label :logo, "Sélectionner le logo", for: "main-image", class: 'btn btn-info'
+          = f.label :logo, for: "main-image", class: 'btn btn-sm btn-outline-info' do
+            i.fas.fa-file-upload>
+            ' Sélectionner le logo
           = f.file_field :logo, id: "main-image", class: "d-none", data:{action: 'change->file-upload#displayFileName'}
           div
             small data-target="file-upload.nameDisplayed"
         - if Setting.logo.present?
           .form-group
-            = link_to "Supprimer l'image actuelle", destroy_upload_admin_settings_path(Setting.logo.id, redirect: :show),
-                        method: :delete
-      - if Setting.logo.present?
-        .col-8
-          div Image actuelle :
-          => image_tag Setting.logo.variant(resize_to_limit: [150, nil])
+            = link_to destroy_upload_admin_settings_path(Setting.logo.id, redirect: :show),
+                        method: :delete, class: 'btn btn-sm btn-outline-danger' do
+              i.fas.fa-trash-alt>
+              ' Supprimer l'image actuelle
 
     .action-btns
       => f.submit class: "btn btn-primary"
