--- a/app/views/admin/formations/_form.html.slim
+++ b/app/views/admin/formations/_form.html.slim
@@ -12,6 +12,10 @@
   = f.label :description, class: "font-weight-bold"
   = f.rich_text_area :description
 
+= render partial: 'admin/shared/picture_form', locals: { \
+  f: f, \
+  destroy_path: f.object.image.present? ? destroy_upload_admin_formation_path(f.object, f.object.image.id, redirect: :edit) : nil}
+
 .py-2.px-4.bg-light.mb-3
   .row
     .col
