--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -33,7 +33,7 @@ html lang='fr'
                     = link_to "En savoir plus", theme_path(theme), class: "underline"
                   p = theme.baseline
                 .p-6.flex
-                  => image_tag theme.main_image.variant(resize_to_limit: [150, nil]) if theme.main_image.present?
+                  => image_tag theme.image.variant(resize_to_limit: [150, nil]) if theme.image.present?
                   .flex.w-full.ml-6
                     .w-2/3
                       h4.uppercase.font-bold.text-sm Nos actions
@@ -57,7 +57,8 @@ html lang='fr'
             rect y="60" width="100" height="15" rx="8"
 
         = link_to root_path, title: "Page d'accueil", class: "block flex items-center w-auto" do
-          => image_tag Setting.logo.variant(resize_to_limit: [nil, 50]), class: "mr-3"
+          - if Setting.logo.present?
+            => image_tag Setting.logo.variant(resize_to_limit: [nil, 50]), class: "mr-3"
           / svg.fill-current.h-8.w-8.mr-2 height="54" viewbox=("0 0 54 54") width="54" xmlns="http://www.w3.org/2000/svg" 
           /   path d=("M13.5 22.1c1.8-7.2 6.3-10.8 13.5-10.8 10.8 0 12.15 8.1 17.55 9.45 3.6.9 6.75-.45 9.45-4.05-1.8 7.2-6.3 10.8-13.5 10.8-10.8 0-12.15-8.1-17.55-9.45-3.6-.9-6.75.45-9.45 4.05zM0 38.3c1.8-7.2 6.3-10.8 13.5-10.8 10.8 0 12.15 8.1 17.55 9.45 3.6.9 6.75-.45 9.45-4.05-1.8 7.2-6.3 10.8-13.5 10.8-10.8 0-12.15-8.1-17.55-9.45-3.6-.9-6.75.45-9.45 4.05z") /
           span.font-semibold.text-xl.tracking-tight = Setting.project_name
