--- a/app/views/formations/index.html.slim
+++ b/app/views/formations/index.html.slim
@@ -40,5 +40,7 @@
               p 
                 span.uppercase.font-bold Tarif : 
                 => number_to_euro(formation.cost)
+            .w-1/4.text-right.py-2
+              = link_to "S'inscrire", new_formation_subscription_path(formation), class: 'bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded'
 
 
