--- a/app/views/formations/index.html.slim
+++ b/app/views/formations/index.html.slim
@@ -23,9 +23,6 @@
       - category.formations.each do |formation|
         .mb-6
           h3.text-2xl.font-bold.text-gray-900 = formation.title
-          .flex
-            .bg-primary.px-3.py-2.mr-2
-              = formation.formation_category.title
           - if formation.image.attached?
             = image_tag formation.image, class: "mb-8 mx-auto"
           .mb-3 == formation.description
@@ -41,7 +38,9 @@
               p 
                 span.uppercase.font-bold Tarif : 
                 => number_to_euro(formation.cost)
-            .w-1/4.text-right.py-2
-              = link_to "S'inscrire", new_formation_subscription_path(formation), class: 'bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded'
-
+            .w-1/4.text-right
+              div class="mb-2 #{'font-bold text-red-600' if formation.is_full?}"
+                = formation_tickets_status(formation)
+              div class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded text-center"
+                = link_to "S'inscrire #{'sur liste d\'attente' if formation.is_full?}", new_formation_subscription_path(formation)
 
