--- a/app/front/styles/application/flash-message.sass
+++ b/app/front/styles/application/flash-message.sass
@@ -14,3 +14,9 @@
 
 .alert-warning
   @apply bg-yellow-400 text-yellow-900
+
+.alert-danger
+  @apply bg-red-400 text-red-900
+
+.alert-success
+  @apply bg-green-400 text-green-900
