Add form asterisk

--- a/app/front/styles/application.scss
+++ b/app/front/styles/application.scss
@@ -14,4 +14,5 @@ $fa-font-path: '~@fortawesome/fontawesome-free/webfonts';
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
 @import "application/layout.sass";
+@import "application/form.sass";
 @import "application/flash-message.sass";
