--- a/app/views/formations/subscriptions/_participant_fields.html.slim
+++ b/app/views/formations/subscriptions/_participant_fields.html.slim
@@ -7,17 +7,17 @@
       = f.text_field :organization, class: 'appearance-none border-2 border-gray-400 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-purple-500'
   .md:flex.md:items-center.mb-6
     .md:w-1/3
-      = f.label :firstname, class:"block text-gray-700 font-bold md:text-right mb-1 md:mb-0 pr-4"
+      = f.label :firstname, class:"required block text-gray-700 font-bold md:text-right mb-1 md:mb-0 pr-4"
     .md:w-2/3
       = f.text_field :firstname, class: 'appearance-none border-2 border-gray-400 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-purple-500'
   .md:flex.md:items-center.mb-6
     .md:w-1/3
-      = f.label :lastname, class:"block text-gray-700 font-bold md:text-right mb-1 md:mb-0 pr-4"
+      = f.label :lastname, class:"required block text-gray-700 font-bold md:text-right mb-1 md:mb-0 pr-4"
     .md:w-2/3
       = f.text_field :lastname, class: 'appearance-none border-2 border-gray-400 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-purple-500'
   .md:flex.md:items-center.mb-6
     .md:w-1/3
-      = f.label :email, class:"block text-gray-700 font-bold md:text-right mb-1 md:mb-0 pr-4"
+      = f.label :email, class:"required block text-gray-700 font-bold md:text-right mb-1 md:mb-0 pr-4"
     .md:w-2/3
       = f.email_field :email, class: 'appearance-none border-2 border-gray-400 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-purple-500'
   .md:flex.md:items-center.mb-6
@@ -28,3 +28,4 @@
   small= link_to "Supprimer", "#", data: { action: "click->nested-fields#remove_association" }, class: "js-delete-link underline"
 
   = f.hidden_field :_destroy
+  small.italic * : Champs obligatoire
