Improve description display #2

--- a/app/front/styles/application/layout.sass
+++ b/app/front/styles/application/layout.sass
@@ -29,3 +29,9 @@ html, body
     background-color: theme('colors.gray.800')
     .block-menu
       display: block
+
+.trix-content
+  h1
+    @apply text-xl
+  a
+    text-decoration: underline
