--- a/app/views/formations/subscriptions/new.html.slim
+++ b/app/views/formations/subscriptions/new.html.slim
@@ -8,7 +8,7 @@
       span.uppercase.font-bold Lieu : 
       => formation_location(@formation)
     p 
-      span.uppercase.font-bold Intervenant : 
+      span.uppercase.font-bold Intervenant·e : 
       => @formation.speaker
     p 
       span.uppercase.font-bold Tarif : 
