--- a/app/views/formations/subscriptions/show.html.slim
+++ b/app/views/formations/subscriptions/show.html.slim
@@ -13,7 +13,7 @@
         span.uppercase.font-bold Lieu :
         => formation_location(@formation)
       p
-        span.uppercase.font-bold Intervenant :
+        span.uppercase.font-bold Intervenant·e :
         => @formation.speaker
 
   .mb-3
