--- a/app/views/formations/index.html.slim
+++ b/app/views/formations/index.html.slim
@@ -3,9 +3,16 @@
 
 .flex
   .md:w-1/4.px-8 data-controller='manage-index'
-    h3.text-xl.mb-3 Filtrer
-    .bg-gray-300.px-4.py-3
-      = form_tag formations_path, method: :get do
+    = form_tag formations_path, method: :get do
+      .mb-3.flex
+        .mr-2.font-bold
+          ' Tri : 
+        div
+          => select_tag :sort, \
+            options_for_select([["Par catégorie", :by_formation_category],["Prochaines formations", :by_future]], params[:sort]), \
+            class:"w-full px-4 py-2", data: {action: 'change->manage-index#submitFilterForm'}
+      h3.text-xl.mb-3 Filtrer
+      .bg-gray-300.px-4.py-3
         h4.font-bold Par catégorie
 
         - @all_formation_categories.each do |category|
@@ -18,29 +25,9 @@
               => category.title
 
   .md:w-3/4.px-8
-    - @filtered_formation_categories.each do |category|
-      h2.text-4xl.font-bold.text-gray-900 = category.title
-      - category.formations.each do |formation|
-        .mb-6
-          h3.text-2xl.font-bold.text-gray-900 = formation.title
-          - if formation.image.attached?
-            = image_tag formation.image, class: "mb-8 mx-auto"
-          .mb-3 == formation.description
-          .bg-gray-300.px-4.py-3.mb-3.flex
-            .w-3/4
-              p = formation_dates(formation)
-              p 
-                span.uppercase.font-bold Lieu : 
-                => formation_location(formation)
-              p 
-                span.uppercase.font-bold Intervenant·e : 
-                => formation.speaker
-              p 
-                span.uppercase.font-bold Tarif : 
-                => number_to_euro(formation.cost)
-            .w-1/4.text-right
-              div class="mb-2 #{'font-bold text-red-600' if formation.is_full?}"
-                = formation_tickets_status(formation)
-              div class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded text-center"
-                = link_to "S'inscrire #{'sur liste d\'attente' if formation.is_full?}", new_formation_subscription_path(formation)
-
+    - if params[:sort] == 'by_future'
+      = render partial: 'formations/formation_card', collection: @formations, as: :formation
+    - else
+      - @formations.each do |category, formations|
+        h2.text-4xl.font-bold.text-gray-900 = category.title
+        = render partial: 'formations/formation_card', collection: formations, as: :formation
